add prettier config and format all files

--- a/src/components/Layouts/loginLayout.scss
+++ b/src/components/Layouts/loginLayout.scss
@@ -1,18 +1,18 @@
-@import "../../assets/css/variable";
-.loginWrapper{
+@import '../../assets/css/variable';
+.loginWrapper {
   background: #f0f2f5;
   min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.loginLayout{
+.loginLayout {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.loginCard{
-  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+.loginCard {
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   margin: 0;
@@ -23,7 +23,7 @@
   line-height: 1.5715;
   list-style: none;
   -webkit-font-feature-settings: 'tnum';
-  font-feature-settings: 'tnum', "tnum";
+  font-feature-settings: 'tnum', 'tnum';
   position: relative;
   background: #fff;
   border-radius: $borderRadius;
@@ -32,16 +32,16 @@
   display: flex;
   justify-content: space-evenly;
   flex-direction: column;
-  .companyLogo{
+  .companyLogo {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    img{
+    img {
       border: 1px solid #ddd;
     }
   }
-  .loginCardBody{
+  .loginCardBody {
     margin-top: 20px;
     display: flex;
     justify-content: center;
